update some phrase

--- a/liur.extended.dict.yaml
+++ b/liur.extended.dict.yaml
@@ -25,22 +25,31 @@ import_tables:
 #尛	sss	-1
 
 #人工編碼詞，適合超長句子，或包含數字的詞
-胡培舜	name
 航空警察局	apb
 警政署	npa
 內政部	moi
 依據內政部警政署107年○月○日警署資字第○號函辦理。	from
+第一層決行	one
+第二層決行	two
 
 #無編碼詞
 #兩碼詞：「字1」首碼+「字2」首碼
        #如「國家」輸入on
 警察
 警員
+驗收
+臺北
+高雄
+局長
 
 #三碼詞：「字1」首碼+「字2」首碼+「字3」首碼
        #如「交通部」輸入ltl
 警務正
 偵查員
+航警局
+民航局
+交通部
+副局長
 
 #四至十碼詞：「字1、字2、字3」首碼+「最後一字」首碼
        #如「無蝦米輸入法」輸入vcmw (「無」：首碼，「蝦」：首碼，「米」：首碼，「法」：首碼)
@@ -48,3 +57,10 @@ import_tables:
 	   #如「台北市政府」輸入ufll (「台」：首碼，「北」：首碼，「市」：首碼，「府」：首碼)
 勤務指揮中心
 勤指中心
+民用航空局
+安檢大隊
+保安大隊
+刑警大隊
+臺北分局
+高雄分局
+主任秘書
