--- a/trime.custom.yaml
+++ b/trime.custom.yaml
@@ -1,9 +1,65 @@
 # trime.custom.yaml  
 patch:
+  "preset_keyboards/liur":
+    name: 嘸蝦米36鍵
+    author: "caesarhu <hupeishun@gmail.com>"
+    ascii_mode: 0
+    width: 10
+    height: 66
+    keys:
+    - {click: '1', long_click: '!'}
+    - {click: '2', long_click: '@'}
+    - {click: '3', long_click: '#'}
+    - {click: '4', long_click: '$'}
+    - {click: '5', long_click: '%'}
+    - {click: '6', long_click: '^'}
+    - {click: '7', long_click: '&'}
+    - {click: '8', long_click: '*'}
+    - {click: '9', long_click: '('}
+    - {click: '0', long_click: ')'}
+    - {click: 'q', long_click: '_'}
+    - {click: 'w', long_click: '-'}
+    - {click: 'e', long_click: '+'}
+    - {click: 'r', long_click: '='}
+    - {click: 't', long_click: '|'}
+    - {click: 'y', long_click: '\'}
+    - {click: 'u', long_click: '['}
+    - {click: 'i', long_click: ']'}
+    - {click: 'o', long_click: '{'}
+    - {click: 'p', long_click: '}'}
+    - {width: 5}
+    - {click: 'a', long_click: select_all }
+    - {click: 's', long_click: Home}
+    - {click: 'd', long_click: End}
+    - {click: 'f', long_click: Page_Up}
+    - {click: 'g', long_click: Page_Down}
+    - {click: 'h', long_click: Left}
+    - {click: 'j', long_click: Down}
+    - {click: 'k', long_click: ':'}
+    - {click: 'l', long_click: ';'}
+    - {width: 5}
+    - {click: Shift_L, send_bindings: false, width: 15}
+    - {click: 'z', long_click: '`'}
+    - {click: 'x', long_click: cut}
+    - {click: 'c', long_click: copy}
+    - {click: 'v', long_click: paste}
+    - {click: 'b', long_click: '~'}
+    - {click: 'n', long_click: '"'}
+    - {click: 'm', long_click: "'"}
+    - {click: BackSpace, width: 15}
+    - {click: Hide, long_click: Menu, width: 15}
+    - {click: Keyboard_symbols, long_click: Keyboard_number}
+    - {click: ',', long_click: '<'}
+    - {click: space, width: 30}
+    - {click: '.', long_click: '>'}
+    - {click: '/', long_click: '?'}
+    - {click: Return, long_click: CommitComment, width: 15}
   "preset_keyboards/qwerty0/height": 66  #高度改为66
   "preset_keyboards/bopomofo/height": 66  #高度改为66
   "style/candidate_view_height": 55  #候选字區高度
   "style/candidate_text_size": 36  #候选字体大小
-  "style/key_text_size": 28
-  "style/symbol_text_size": 12
-  "preset_keyboards/liur/import_preset": qwerty0   #预设36键布局的ID是qwerty0
+  "style/key_text_size": 32 #按键文本大小（click）
+  "style/symbol_text_size": 14 #符号大小（long_click和hint）
+  "style/text_size": 30 #编码大小
+  "style/comment_text_size": 16 #候选注释大小
+#  "preset_keyboards/liur/import_preset": qwerty0   #预设36键布局的ID是qwerty0
